src/test/deca/syntax/valid/created/fonction.deca
// Description :
//    une instruction
//
// Resultats :
//		Ok


{

println("xxx");

}