src/test/deca/syntax/invalid/created/class/new_missing_ident.deca
// Description :
//    new identificateur de classe manquant
//
// Resultats :
//		Syntaxe error

{
new ();
}